# langchain

customer_robot/: main.py  pyproject.toml
customer_robot/chroma_db/: chroma.sqlite3
